# esp32-s3-tensorflow

./: CMakeLists.txt  README.md  partitions_user.csv  sdkconfig  sdkconfig.old  tensorflow-lite.ipynb
components/bsp/: CMakeLists.txt  cst816t_driver.c  ov5640.c  ov5640.h
components/tensorflow_lite/: CMakeLists.txt  function.cc  function.h  model.cc  model.h
main/: CMakeLists.txt  esp32s3_lvgl.c  idf_component.yml
